Do not release from branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 stages:
   - name: test
   - name: release
-    if: ((branch = master AND type = push) OR (tag IS present)) AND NOT fork
+    if: ((branch = master AND type = push) AND NOT fork)
   - name: microsite
     if: ((branch = master AND type = push) AND NOT fork)
 
