Fix sbt version on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,15 @@ before_install:
 - git fetch --tags
 - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash -x scripts/decrypt_keys.sh; fi
 - export PATH=${PATH}:./vendor/bundle
-
+install:
+  - |
+    # update this only when sbt-the-bash-script needs to be updated
+    export SBT_LAUNCHER=1.4.9
+    export SBT_OPTS="-Dfile.encoding=UTF-8"
+    curl -L --silent "https://github.com/sbt/sbt/releases/download/v$SBT_LAUNCHER/sbt-$SBT_LAUNCHER.tgz" > $HOME/sbt.tgz
+    tar zxf $HOME/sbt.tgz -C $HOME
+    sudo rm /usr/local/bin/sbt
+    sudo ln -s $HOME/sbt/bin/sbt /usr/local/bin/sbt
 stages:
   - name: test
   - name: release
