--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: ['2.13.12', '3.3.1']
+        scala: ["2.13.14", "3.3.1"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
